infra-microservices/infra-gke-cluster/manifest/prod/opti-moteur-recherche/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moteur-recherche
  labels:
    app.kubernetes.io/name: opti-moteur-recherche
    app.kubernetes.io/managed-by: manifest
    environment: prod
    owner: devsecops
    cost-center: ia-rag
    app: opti-moteur-recherche
