infra-microservices/infra-gke-cluster/manifest/prod/opti-moteur-recherche/manifests/13-typesense-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense
  namespace: moteur-recherche
  labels:
    app.kubernetes.io/name: typesense
    app.kubernetes.io/managed-by: manifest
    environment: prod
    owner: devsecops
    cost-center: ia-rag
    app: opti-moteur-recherche
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: typesense
    app: opti-moteur-recherche
  ports:
    - name: http
      port: 8108
      targetPort: 8108
      protocol: TCP
