infra-microservices/infra-gke-cluster/manifest/prod/opti-moteur-recherche/manifests/02-netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: moteur-recherche
  labels:
    app.kubernetes.io/managed-by: manifest
    environment: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
