infra-microservices/infra-gke-cluster/manifest/prod/opti-moteur-recherche/manifests/06-netpol-allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-namespace
  namespace: moteur-recherche
  labels:
    app.kubernetes.io/managed-by: manifest
    environment: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
